# AgentChat

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
agent-platform/: README.md  docker-compose.yml  test_task.json
agent-platform/local-connector/src-tauri/: Cargo.toml  tauri.conf.json
agent-platform/local-connector/src-tauri/src/: connector.rs  main.rs
app/: .dockerignore  .env.example  Dockerfile  index.html  inject-build-time.cjs  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
backend/: .dockerignore  Dockerfile  generate_ledger_bridge.py  pom.xml  preprocess_template.py  query_daily_schedule_bridge.py  skill_runner.py
deploy/: QUICKSTART.md  README.md  api_log_enhancement_migration.sql  application-prod.yml.template  autocode_api_logs.py  autocode_api_usage.py  autocode_billing_patch.py  autocode_dashboard.html  autocode_runtime_events_migration.sql  autocode_task_state_migration.sql  billing_scene_policy_migration.sql  billing_security_migration.sql  billing_security_migration_compat.sql  build-frontend.sh  deploy-now.ps1  deploy-storage.ps1  deploy.ps1  deploy.sh  gen_memory_index.py  harness_evolution_migration.sql  harness_permission_fix_migration.sql  memory_layered_migration.sql  migrate_p2-2.sql  migrate_p2-3.sql  migrate_subscription_role.sql  model_routing_rule_v2_migration.sql  nginx-muhugochat.conf  payment_migration.sql  rbac_migration.sql  run.bat  scene_type_migration.sql  user_api_key_migration.sql  workflow_checkpoint_migration.sql  workflow_v2_migration.sql
docs-site/: index.md  (+2 more)
(+598 files in other folders)
