[package]
name = "autocode_local_connector"
version = "0.4.7"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tauri-plugin-deep-link = "2"
futures-util = "0.3"
rfd = "0.15"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "fs", "io-util", "macros"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
walkdir = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[build-dependencies]
tauri-build = { version = "2" }
